# ChangeLog for net-analyzer/smokeping
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/smokeping/ChangeLog,v 1.40 2012/05/28 16:09:03 armin76 Exp $

  28 May 2012; Raúl Porcel <armin76@gentoo.org> smokeping-2.4.2-r3.ebuild,
  smokeping-2.4.2-r4.ebuild:
  Drop sparc keywords

  29 Apr 2012; Tobias Klausmann <klausman@gentoo.org> files/smokeping.init.2:
  Fix init script to not trigger warnings with newer OpenRC. Also simplify dump
  and restore commands (OpenRC will do these checks for us now).

  25 Apr 2011; Raúl Porcel <armin76@gentoo.org> smokeping-2.4.2-r4.ebuild:
  Add ~sparc wrt #361615

  07 Apr 2011; Jeroen Roovers <jer@gentoo.org> smokeping-2.4.2-r4.ebuild:
  Marked ~hppa (bug #361615).

*smokeping-2.4.2-r4 (01 Apr 2011)

  01 Apr 2011; Peter Volkov <pva@gentoo.org> -files/78_smokeping.conf,
  -smokeping-2.2.4.ebuild, -smokeping-2.3.5.ebuild,
  smokeping-2.4.2-r3.ebuild, +smokeping-2.4.2-r4.ebuild,
  -files/smokeping.init, -files/smokeping.init.1:
  Finally fix blockers with JSON and use in-tree Config-Grammar, bug
  #358389, thank Torsten Veller for this job. Drop old.

  13 Mar 2011; Peter Volkov <pva@gentoo.org> -smokeping-2.4.2-r1.ebuild,
  -smokeping-2.4.2-r2.ebuild, smokeping-2.4.2-r3.ebuild:
  Avoid collisions with perl-core/JSON-PP (blocker), thank Diego Elio Pettenò
  for report in bug #358389. Drop old.

  21 Nov 2010; Raúl Porcel <armin76@gentoo.org> smokeping-2.4.2-r3.ebuild:
  sparc stable wrt #341175

  05 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  smokeping-2.4.2-r3.ebuild:
  Stable on amd64 wrt bug #341175

  05 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  smokeping-2.4.2-r3.ebuild:
  stable x86, bug 341175

*smokeping-2.4.2-r3 (03 Nov 2010)

  03 Nov 2010; Peter Volkov <pva@gentoo.org> +smokeping-2.4.2-r3.ebuild:
  Update dev-perl/Socket6 version and mv enew{user,group} into pkg_setup as