@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/smokeping
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/smokeping/ChangeLog,v 1.40 2012/05/28 16:09:03 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/smokeping/ChangeLog,v 1.41 2012/06/12 03:14:47 zmedico Exp $
+
+  12 Jun 2012; Zac Medico <zmedico@gentoo.org> smokeping-2.4.2-r3.ebuild,
+  smokeping-2.4.2-r4.ebuild:
+  inherit user for enewgroup and enewuser
 
   28 May 2012; Raúl Porcel <armin76@gentoo.org> smokeping-2.4.2-r3.ebuild,
   smokeping-2.4.2-r4.ebuild:
